--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
     <div class="content">
         <div id="intro" class="intro-text">
-            <p>My dear babygirl, this is not much but I managed to make this for your birthday, I really miss you I wish we were celebrating your 20th birthday together in a way in my heart we are spending it together, we're sitting in park with the cats and theo and spending your birthday as a pic-nic together. I really wish we were together today. I really miss you baby, I (we) love you so much.</p>
+            <p>My dear babygirl,<p>
+            </p>this is not much but I managed to make this for your birthday,
+             <p></p>I really miss you I wish we were celebrating your 20th birthday together in a way in my heart we are spending it together, we're sitting in park with the cats and theo and spending your birthday as a pic-nic together. I really wish we were together today. I really miss you baby, I (we) love you so much.</p>
             <p>Your Ruby Rue <333 and your silly Son <33</p>
             <button class="button" id="startButton">Open your birthday booster pack</button>
         </div>
@@ -79,8 +81,10 @@
 
         <!-- Final Page -->
         <div id="final-page" class="final-page">
-            <p>Here's the final surprise! I hope you had fun with the booster pack. Now, I want to leave you with a special message:</p>
-            <p>Happy 20th Birthday, my Alfie, i hope you liked this small gift from me and probably birda, we both miss you a lot loser but at least we will see each other in February!</p>
+            <p> I hope you had fun with the booster pack.</p>
+            <p> Happy 20th Birthday, my Alfie, i hope you liked this small gift from me and probably birda, we both miss you a lot silly loser but at least we will see each other in February and cuddle and kiss a lot !
+            <p> I love you a lot</p>
+            <p> Your Ruby Rue </p>
         </div>
     </div>
 
